crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R3_plus_R2.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__typenum_ladder__R3_plus_R2.rs:5:24
  |
5 |    let _ = R3::new() + R2::new();
  |                        ^^^^^^^^^ expected `UInt<UTerm, B1>`, found `typenum::uint::UTerm`
  |
  = note: expected struct `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>, typenum::bit::B0>>`
             found struct `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>`
